# locale

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.toml  deny.toml  license.html
.github/workflows/: build.yml  clippy.yml  licenses.yml  security.yml
locale/: Cargo.toml
locale-dev/: Cargo.toml
locale-dev/src/: download_latest.rs  format.rs  generate_currency_formatting.rs  generate_datetime_formatting.rs  generate_locales.rs  generate_num_formats.rs  lib.rs  main.rs
locale-rs/: Cargo.toml  README.md
locale-rs/benches/: currency_bench.rs  datetime_bench.rs  locale_bench.rs  num_bench.rs
locale-rs/examples/arabic_nums/: main.rs
locale-rs/examples/currency/: main.rs
locale-rs/examples/datetime/: main.rs
locale-rs/examples/flexible_parsing/: main.rs
locale-rs/src/: currency_formats.rs  datetime_formats.rs  error.rs  lib.rs  locale.rs  num_formats.rs
locale-rs/src/test/: mod.rs  test_currency_formatting.rs  test_datetime_formatting.rs  test_locales.rs  test_num_formatting.rs  test_strum.rs
locale/src/: error.rs  lib.rs  locale.rs  num_formats.rs
locale/src/test/: mod.rs  test_locales.rs  test_num_formatting.rs
