[package]
name = "locale-rs"
authors = ["Julian Tepper"]
version = "0.1.0"
edition = "2024"
description = "A strongly-typed locale library for Rust. Provides localized number and datetime formatting backed by Unicode CLDR data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LowPolyCat1/locale"
keywords = ["locale", "cldr", "format", "internationalization", "i18n"]
categories = ["localization", "internationalization", "parsing"]


[features]
rebuild = []
strum = ["dep:strum", "dep:strum_macros"]
datetime = []
nums = []


[dependencies]
thiserror = { version = "2.0.17" }
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }


[dev-dependencies]
criterion = { version = "*" }


[build-dependencies]


[[bench]]
name = "datetime_bench"
harness = false
features = ["datetime"]


[[example]]
name = "arabic_nums"
features = ["nums"]
