[package]
name = "locale-rs"
authors = ["Julian Tepper"]
version = "0.1.2"
edition = "2024"
description = "A strongly-typed locale library for Rust. Provides localized number and datetime formatting backed by Unicode CLDR data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LowPolyCat1/locale"
keywords = ["locale", "cldr", "format", "internationalization", "i18n"]
categories = ["localization", "internationalization", "parsing"]
documentation = "https://docs.rs/locale-rs"


[features]
rebuild = []
strum = ["dep:strum", "dep:strum_macros"]
datetime = []
nums = []
currency = ["nums"]
all = ["datetime", "nums", "strum", "currency"]


[dependencies]
thiserror = { version = "2.0.17" }
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }


[dev-dependencies]
criterion = { version = "0.8.1" }


[build-dependencies]


[[bench]]
name = "datetime_bench"
harness = false
features = ["datetime"]


[[example]]
name = "arabic_nums"
features = ["nums"]
