[package]
name = "locale"
version = "0.1.0"
edition = "2024"


[features]
rebuild = []
strum = ["dep:strum", "dep:strum_macros"]


[dependencies]
thiserror = { version = "2.0.17" }
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }


[build-dependencies]
